# team-productivity-tracker

./: README.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  deps.py  main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  reports.py  time_entries.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: time_entry.py  user.py  workspace.py
backend/app/routers/: auth.py  reports.py  time_entries.py
backend/app/schemas/: report.py  time_entry.py  user.py
backend/tests/: conftest.py  test_auth.py  test_auth_and_time.py  test_reports.py  test_time_entries.py
frontend/: README.md  jest.config.cjs  package.json  tailwind.config.mjs  tsconfig.json
frontend/__tests__/: login-page.test.tsx  time-tracking-client.test.tsx
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/app/reports/: ReportsClient.tsx  page.tsx
frontend/app/app/time/: TimeTrackingClient.tsx  page.tsx
frontend/app/auth/: AuthContext.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/lib/: apiClient.ts
frontend/app/login/: page.tsx
frontend/app/time/: page.tsx
frontend/lib/: api.ts  auth.tsx
